--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@react-native-community/clipboard": "^1.5.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-paper": "^4.9.2",
-    "react-native-peerjs": "^1.0.4",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-webrtc": "^1.92.0",
     "socket.io-client": "^4.1.3"
   },
