--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,7 +12,7 @@ target 'VCall' do
     :hermes_enabled => false
   )
 
-  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+  # pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   target 'VCallTests' do
     inherit! :complete
